app-test/testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-action-case/src/patmat.cal
namespace patmat:
    type T : A | B(T t) end
    type U : (int n, bool b) end
    actor ExhaustivityActionCase() T X, U Y ==>:
        action
            case
                X:[A], Y:[U(1, false)] ==>
                do
                end
            else
                X:[B(A)], Y:[U(2, false)] ==>
                do
                end
            end
        end
    end
end
